<resources>
    <!-- Titles and Headers -->
    <string name="app_name">Lens Learn</string>
    <string name="landing_title">Lens Learn</string>
    <string name="landing_subtitle">Learn Photography through the seven Principles of Design</string>
    <string name="category_activity_title">Photography Seven Principles of Design</string>
    <string name="settings">Settings</string>
    <string name="category_balance">Balance</string>
    <string name="category_contrast">Contrast</string>
    <string name="category_emphasis">Emphasis</string>
    <string name="category_pattern">Pattern</string>
    <string name="category_rhythm">Rhythm</string>
    <string name="category_space">Space</string>
    <string name="category_unity">Unity</string>
    <string name="stats">Progress</string>
    <string name="results_title">Results</string>

    <!-- Preferences -->
    <string name="theme_preference">Theme</string>
    <string name="permissions_preference">Permissions</string>
    <string name="dark_theme_title">Dark Theme</string>
    <string name="camera_permission_title">Camera Permission</string>
    <string name="internet_permission_title">Internet Permission</string>
    <string name="dark_theme_summary">Toggle the theme between light and dark</string>
    <string name="camera_permission_summary">Grant or revoke camera permission</string>
    <string name="internet_permission_summary">Grant or revoke internet permission</string>

    <!-- Buttons and Navigation -->
    <string name="play">Play</string>
    <string name="share">Share</string>
    <string name="social_media_share">Select and Share</string>
    <string name="share_menu_button">Share</string>
    <string name="progress">Progress</string>
    <string name="next">Next</string>
    <string name="task">My Task</string>
    <string name="take_photo">Take Photo</string>
    <string name="home">Return to Categories</string>

    <!-- Content Descriptions and Accessibility -->
    <string name="landing_icon_description">Lens Learn Icon</string>
    <string name="example_of_photograph_description">This is an example of a photograph from this principle!</string>
    <string name="identify_image_description">A photograph to identify the principle in...</string>
    <string name="image_preview">Image Preview</string>
    <string name="overlay_image">Overlay Image</string>
    <string name="camera">Camera</string>

    <!-- Instructions and Content -->
    <string name="instructions">Select A Category to Start Your Learning Journey!</string>
    <string name="read_and_shake">Read to learn, shake to know more!</string>
    <string name="identify_instructions_left">Swipe left to REJECT</string>
    <string name="identify_instructions_middle">Identify the Principle above in the images below</string>
    <string name="identify_instructions_right">Swipe right to ACCEPT</string>
    <string name="share_instructions">Select and Share your photo on social media! </string>
    <string name="results_message">You got %d correct out of %d. Well done!</string>
    <string name="capture_success_message">Successful Photo Capture, Keep Going!</string>
    <string name="capture_success_final_message">Successful Photo Capture, you successfully completed the task great job!</string>
    <string name="unknown">Choose a Category to Begin!</string>
    <string name="selected_category_message">Selected Category: </string>

    <!-- Placeholders and Testing -->
    <string name="category">Category</string>
    <string name="test">getImagesForCategory(categoryId: Int): Retrieves a list of images associated with the specified category from the local database.
                        getImageById(id: Int): Retrieves an image with the specified ID from the local database.
                        insertImage(image: Image): Inserts a new image into the local database.
                        updateImage(image: Image): Updates an existing image in the local database.
                        deleteImage(image: Image): Deletes an image from the local database.
    </string>

</resources>