<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="categoryViewModel"
            type="cp3406.a2.lenslearn.model.CategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/very_dark_grey"
        tools:context=".view.LearningFragment">

        <TextView
            android:id="@+id/textIndividualCategoryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="@{categoryViewModel.currentCategory.name}"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/category" />

        <ImageView
            android:id="@+id/exampleImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/example_of_photograph_description"
            android:scaleType="fitCenter"
            app:imageFromFilename="@{categoryViewModel.currentCategory.filename}"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@id/textInformationTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIndividualCategoryTitle"
            tools:src="@drawable/img_example_unity" />

        <TextView
            android:id="@+id/textInformationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/dark_blue"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:text="@string/read_and_shake"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/scrollInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scrollInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/colorOnPrimary"
            android:minHeight="300dp"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{categoryViewModel.isShaken ? categoryViewModel.currentCategory.detailedInformation : categoryViewModel.currentCategory.definition}"
                android:textSize="14sp"
                tools:text="@string/test" />

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/next"
            app:layout_constraintBottom_toBottomOf="@+id/scrollInformation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>