<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="categoryViewModel"
            type="cp3406.a2.lenslearn.model.CategoryViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.CategoryActivity">

        <TextView
            android:id="@+id/text_category_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:paddingStart="8dp"
            android:paddingTop="30dp"
            android:paddingEnd="8dp"
            android:paddingBottom="16dp"
            android:text="@string/category_activity_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_balance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_balance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startBalance"
                        android:text="@string/category_balance"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_balance" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_contrast"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_contrast"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startContrast"
                        android:text="@string/category_contrast"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_contrast" />
                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_emphasis"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_emphasis"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startEmphasis"
                        android:text="@string/category_emphasis"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_emphasis" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_pattern"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_pattern"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startPattern"
                        android:text="@string/category_pattern"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_pattern" />
                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_rhythm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_rhythm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startRhythm"
                        android:text="@string/category_rhythm"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_rhythm" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_space"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_space"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startSpace"
                        android:text="@string/category_space"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_space" />
                </androidx.cardview.widget.CardView>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_category_unity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <TextView
                        android:id="@+id/text_category_unity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="startUnity"
                        android:text="@string/category_unity"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:drawableTint="@color/mid_blue"
                        app:drawableTopCompat="@drawable/ic_unity" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_instructions"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/instructions"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    app:drawableTint="@color/mid_blue" />

            </TableRow>
        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/main_nav" />
    </LinearLayout>
</layout>