<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="categoryViewModel"
            type="cp3406.a2.lenslearn.model.CategoryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ShareFragment">

        <TextView
            android:id="@+id/textShareTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:text="@string/social_media_share"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shareInstructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/share_instructions"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textShareTitle" />

        <ImageView
            android:id="@+id/thumbnailImageTop"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_preview"
            android:onClick="selectTopThumbnail"
            app:layout_constraintBottom_toTopOf="@+id/thumbnailImageMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shareInstructions"
            app:srcCompat="@drawable/img_example_balance"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/thumbnailImageMiddle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/image_preview"
            android:onClick="selectMiddleThumbnail"
            app:layout_constraintBottom_toTopOf="@+id/thumbnailImageBottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImageTop"
            app:srcCompat="@drawable/img_example_emphasis" />

        <ImageView
            android:id="@+id/thumbnailImageBottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:contentDescription="@string/image_preview"
            android:onClick="selectBottomThumbnail"
            app:layout_constraintBottom_toTopOf="@+id/shareButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImageMiddle"
            app:srcCompat="@drawable/img_example_unity" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/share"
            app:icon="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/thumbnailImageBottom" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>